Fix icon button alignment and Math.pow usage for IE11 (#3709)
Icon alignment in buttons was off because IE11 calculates flex alignment combined with margin auto incorrectly. Also, we used '**' for calculating power at recommendation of eslint. However our babel tools don't currently support this, so we need to move back to Math.pow

--- a/src/sass/7-components/_buttons.icons.scss
+++ b/src/sass/7-components/_buttons.icons.scss
@@ -12,7 +12,6 @@
 	width: $xui-icon-standard;
 
 	.#{$ns}-icon {
-		@include xui-margin-horizontal-auto; // Safari seems to ignore the flex rules and does not center horizontally
 		display: block;
 	}
 
